homework3/scripts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-homework3-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-homework3
  template:
    metadata:
      labels:
        app: otus-homework3
    spec:
      containers:
        - name: otus-homework3
          image: yalekseev1994/microservice-study:1.0.8-SNAPSHOT
          ports:
            - containerPort: 8000
