homework3/scripts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-homework3-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/server-snippets: |
      location /admin {
         deny all;
         return 403 "Do not go, Stalker!";
      }
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otus-homework3-service
                port:
                  number: 8000
